<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50">

    <Button
        android:id="@+id/button18"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:text="@string/ac"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FF0026"
        app:cornerRadius="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <Button
        android:id="@+id/button12"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="@string/bbbb"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FFEA00"
        app:cornerRadius="500"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="435dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182"
        app:srcCompat="@drawable/line"
        android:contentDescription="@string/jhg" />

    <Button
        android:id="@+id/button"
        android:layout_width="173dp"
        android:layout_height="85dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_0"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FFEA00"
        app:cornerRadius="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/asda"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FFEA00"
        app:cornerRadius="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />

    <Button
        android:id="@+id/button6"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="118dp"
        android:text="@string/nnn"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FFEA00"
        app:cornerRadius="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button7"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:text="@string/oiu"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FF9100"
        app:cornerRadius="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <Button
        android:id="@+id/button17"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:text="@string/iou"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FF9100"
        app:cornerRadius="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <Button
        android:id="@+id/button15"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:text="@string/asdas"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FF9100"
        app:cornerRadius="500"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668" />

    <Button
        android:id="@+id/button16"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginBottom="13dp"
        android:text="@string/asd"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FF9100"
        app:cornerRadius="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <Button
        android:id="@+id/button5"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:text="@string/mmmm"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FFEA00"
        app:cornerRadius="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <Button
        android:id="@+id/button13"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:text="@string/dsa"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FFEA00"
        app:cornerRadius="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <Button
        android:id="@+id/button14"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:text="@string/yy"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FFEA00"
        app:cornerRadius="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <Button
        android:id="@+id/button9"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="9dp"
        android:text="@string/nbv"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FFEA00"
        app:cornerRadius="500"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button10"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginBottom="9dp"
        android:text="@string/_5"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FFEA00"
        app:cornerRadius="500"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button11"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="9dp"
        android:text="@string/_6"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FFEA00"
        app:cornerRadius="500"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button8"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginStart="118dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/dsad"
        android:textColor="#FAF9F6"
        android:textSize="36sp"
        app:backgroundTint="#FFEA00"
        app:cornerRadius="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="20dp"
        android:layout_height="52dp"
        android:layout_marginStart="375dp"
        android:layout_marginLeft="375dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>